# fusions

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  demo_diffusion.ipynb  pyproject.toml  run.py  run_cfm.py  run_nested.py  run_nested_rosenbrock.py  test.ipynb  test.py  tutorial.ipynb  tutorial_cfm.ipynb  tutorial_nested.ipynb
.github/workflows/: tests.yml
biff/: __init__.py  biff.py
fusions/: __init__.py  cfm.py  diffusion.py  integrate.py  model.py  nested.py  network.py  optimal_transport.py  ott.py  plotting.py  utils.py
plots/: trace.ipynb
tests/: test_model.py
tests/data/: data_dead-birth.txt
