[tool.poetry]
name = "fusions"
version = "0.4.3"
description = "Diffusion meets sampling"
authors = ["David Yallup <david.yallup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flax = "^0.8.2"
anesthetic = "^2.4.2"
pytest = "^7.3"
tqdm = "^4.62.0"
torch = "^2.1.0"
diffrax = "^0.4.0"
distrax = "^0.1.5"
optax = "^0.2.2"


# Testing related dependencies - optional
[tool.poetry.group.test.dependencies]
pytest = "^7.3"
pytest-cov = "^4.0"
[tool.poetry.group.test]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

# flake8 - basic linter
[tool.flake8]
count = true
# compatibility with black
max-line-length = 88
ignore = ['E203', 'W503']
exclude = ['examples']
